--- a/WINTER 25-26 COURSE UPDATES/1 Start Here/Course Orientation.html
+++ b/WINTER 25-26 COURSE UPDATES/1 Start Here/Course Orientation.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
+
 <html dir="ltr" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f2f2f2">
-    <title>Course Orientation: WINTER 25-26 COURSE UPDATES</title>
-
-    <!-- Canvas Core CSS Files (in order from Canvas source) -->
-    <link rel="stylesheet" href="../../canvas-fonts.css" media="screen" />
-    <link rel="stylesheet" href="../../canvas-variables.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-common.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-wiki-page.css" media="screen" />
-    <link rel="stylesheet" href="../../catalog_canvas_global.css" media="all" />
-    <link rel="stylesheet" href="../../webaimCatalog.css" media="all" />
-    <link rel="stylesheet" href="../../AD-365-V4.css" media="all" />
-    <link rel="stylesheet" href="../../canvas-custom-overrides.css" media="all" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#f2f2f2" name="theme-color"/>
+<title>Course Orientation: WINTER 25-26 COURSE UPDATES</title>
+<!-- Canvas Core CSS Files (in order from Canvas source) -->
+<link href="../../canvas-fonts.css" media="screen" rel="stylesheet"/>
+<link href="../../canvas-variables.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-common.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-wiki-page.css" media="screen" rel="stylesheet"/>
+<link href="../../catalog_canvas_global.css" media="all" rel="stylesheet"/>
+<link href="../../webaimCatalog.css" media="all" rel="stylesheet"/>
+<link href="../../AD-365-V4.css" media="all" rel="stylesheet"/>
+<link href="../../canvas-custom-overrides.css" media="all" rel="stylesheet"/>
 </head>
 <body class="with-left-side course-menu-expanded padless-content pages primary-nav-expanded context-course_2879">
-    <div class="content">
-        <div style="background-color: #f0f8ff; border: 2px solid #1c205b; border-radius: 4px; padding: 1em; margin-bottom: 1.5em; text-align: center;">
-            <p style="margin: 0; font-weight: bold; color: #1c205b; font-size: 1.1em;">
-                📄 <a href="https://usu.app.box.com/integrations/officeonline/openOfficeOnline?fileId=2071049022878&sharedAccessCode=" target="_blank" style="color: #bf1722; text-decoration: underline;">Open Source Document in Word Online</a>
-            </p>
-        </div>
-        <div class="user_content">
-        <div class="">
+<div class="content">
+<div style="background-color: #f0f8ff; border: 2px solid #1c205b; border-radius: 4px; padding: 1em; margin-bottom: 1.5em; text-align: center;">
+<p style="margin: 0; font-weight: bold; color: #1c205b; font-size: 1.1em;">
+                📄 <a href="https://usu.app.box.com/integrations/officeonline/openOfficeOnline?fileId=2071049022878&amp;sharedAccessCode=" style="color: #bf1722; text-decoration: underline;" target="_blank">Open Source Document in Word Online</a>
+</p>
+</div>
+<div class="user_content">
+<div class="">
 <div>
 <h2>Video</h2>
-<p><iframe class="lti-embed" style="width: 608px; height: 402px;" title="Course Orientation (08:04)" src="https://usucourses.instructure.com/courses/2879/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2F2246721.kaf.kaltura.com%2Fbrowseandembed%2Findex%2Fmedia%2Fentryid%2F1_h3ocquwi%2FshowDescription%2Ffalse%2FshowTitle%2Ffalse%2FshowTags%2Ffalse%2FshowDuration%2Ffalse%2FshowOwner%2Ffalse%2FshowUploadDate%2Ffalse%2FplayerSize%2F608x402%2FplayerSkin%2F53311072%2F" width="608" height="402" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *" loading="lazy"></iframe></p>
+<p><iframe allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *" allowfullscreen="allowfullscreen" class="lti-embed" height="402" loading="lazy" mozallowfullscreen="mozallowfullscreen" src="https://usucourses.instructure.com/courses/2879/external_tools/retrieve?display=borderless&amp;url=https%3A%2F%2F2246721.kaf.kaltura.com%2Fbrowseandembed%2Findex%2Fmedia%2Fentryid%2F1_h3ocquwi%2FshowDescription%2Ffalse%2FshowTitle%2Ffalse%2FshowTags%2Ffalse%2FshowDuration%2Ffalse%2FshowOwner%2Ffalse%2FshowUploadDate%2Ffalse%2FplayerSize%2F608x402%2FplayerSkin%2F53311072%2F" style="width: 608px; height: 402px;" title="Course Orientation (08:04)" webkitallowfullscreen="webkitallowfullscreen" width="608"></iframe></p>
 </div>
 <div>
 <h2>Guide</h2>
 <div class="guide">
 <div>
 <h1>Course Orientation</h1>
-<p>Welcome to the Accessible Documents: Word, PowerPoint, &amp; Acrobat course. In this video, I'm using the Chrome browser to interact with the Canvas learning management system. Canvas is optimized for Chrome. If you use a different browser, some parts of the user interface may have a different visual appearance than the one shown in this video.<br><br>This video will cover three main topics:</p>
+<p>Welcome to the Accessible Documents: Word, PowerPoint, &amp; Acrobat course. In this video, I'm using the Chrome browser to interact with the Canvas learning management system. Canvas is optimized for Chrome. If you use a different browser, some parts of the user interface may have a different visual appearance than the one shown in this video.<br/><br/>This video will cover three main topics:</p>
 <ul>
 <li>Canvas's user interface</li>
 <li>Start Here activities</li>
@@ -51,14 +51,14 @@
 <h4>Home</h4>
 <p>The Home button is a handy way to navigate back to the main page from other parts of the course.</p>
 <h4>Grades</h4>
-<p>I'll click the "Grades" link to display the page where your scores will be posted as you complete quizzes and exams. There is a widget that will allow you to determine the display order for these assessments. This "Arrange By" filter is set to "Due Date" by default.<br><br><span>To display your quizzes and exams in the order in which you will take them, you'll need to </span></p>
+<p>I'll click the "Grades" link to display the page where your scores will be posted as you complete quizzes and exams. There is a widget that will allow you to determine the display order for these assessments. This "Arrange By" filter is set to "Due Date" by default.<br/><br/><span>To display your quizzes and exams in the order in which you will take them, you'll need to </span></p>
 <div class="callout instructions">
-<h5>Change the filter by:<br><br></h5>
+<h5>Change the filter by:<br/><br/></h5>
 <ol class="">
 <ol class="">
-<li>Clicking the filter tool.<br><img src="https://usucourses.instructure.com/courses/2879/files/1235615/preview?verifier=ecLThp5069YZoa1UIEYlPPkFsLmC3IYtj7Q7cZ3H" alt="Screenshot of a mouse cursor positioned on the Grades filter widget." width="50%" height="50%" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235615" data-api-returntype="File" loading="lazy"><br><br></li>
-<li>Selecting "Assignment Group" from the drop-down list.<br><img src="https://usucourses.instructure.com/courses/2879/files/1235475/preview?verifier=5klbrAE0lKv2Jtb1MbivFqQ9nel3UnpYHEhvjUVP" alt="Screenshot of &quot;Assignment Group&quot; highlighted on the dropdown menu for the Grades filter." width="50%" height="50%" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235475" data-api-returntype="File" loading="lazy"><br><br></li>
-<li>Clicking the "Apply" button.<br><img src="https://usucourses.instructure.com/courses/2879/files/1235426/preview?verifier=qLgkAtSMLsSZvzJSnXEsSOR383F8SGohmmQVQkWY" alt="Screenshot of the &quot;Apply&quot; button highlighted on the Grades filter." width="50%" height="50%" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235426" data-api-returntype="File" loading="lazy"></li>
+<li>Clicking the filter tool.<br/><img alt="Screenshot of a mouse cursor positioned on the Grades filter widget." data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235615" data-api-returntype="File" height="50%" loading="lazy" src="https://usucourses.instructure.com/courses/2879/files/1235615/preview?verifier=ecLThp5069YZoa1UIEYlPPkFsLmC3IYtj7Q7cZ3H" width="50%"/><br/><br/></li>
+<li>Selecting "Assignment Group" from the drop-down list.<br/><img alt='Screenshot of "Assignment Group" highlighted on the dropdown menu for the Grades filter.' data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235475" data-api-returntype="File" height="50%" loading="lazy" src="https://usucourses.instructure.com/courses/2879/files/1235475/preview?verifier=5klbrAE0lKv2Jtb1MbivFqQ9nel3UnpYHEhvjUVP" width="50%"/><br/><br/></li>
+<li>Clicking the "Apply" button.<br/><img alt='Screenshot of the "Apply" button highlighted on the Grades filter.' data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235426" data-api-returntype="File" height="50%" loading="lazy" src="https://usucourses.instructure.com/courses/2879/files/1235426/preview?verifier=qLgkAtSMLsSZvzJSnXEsSOR383F8SGohmmQVQkWY" width="50%"/></li>
 </ol>
 </ol>
 </div>
@@ -91,9 +91,9 @@
 </ul>
 <h5>Earned Certificates</h5>
 <p>There is a grading item called "Certificate of Completion Status."</p>
-<p><img class="screen" src="https://usucourses.instructure.com/courses/2879/files/1235607/preview?verifier=Y8qJZqXvqJZqXvqJZqXvqJZqXvqJZqXv" alt="Screenshot of the certificate status grading item." data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235607" data-api-returntype="File" loading="lazy"></p>
+<p><img alt="Screenshot of the certificate status grading item." class="screen" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235607" data-api-returntype="File" loading="lazy" src="https://usucourses.instructure.com/courses/2879/files/1235607/preview?verifier=Y8qJZqXvqJZqXvqJZqXvqJZqXvqJZqXv"/></p>
 <p>After the fourth week of the course, each participant's grades will be reviewed periodically. When a participant has met the quiz and exam score criteria, their status will be marked as "Earned."</p>
-<p><img class="screen" src="https://usucourses.instructure.com/courses/2879/files/1235530/preview?verifier=Y8qJZqXvqJZqXvqJZqXvqJZqXvqJZqXv" alt="Screenshot of the certificate status grading item marked &quot;Earned&quot;." data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235530" data-api-returntype="File" loading="lazy"></p>
+<p><img alt='Screenshot of the certificate status grading item marked "Earned".' class="screen" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235530" data-api-returntype="File" loading="lazy" src="https://usucourses.instructure.com/courses/2879/files/1235530/preview?verifier=Y8qJZqXvqJZqXvqJZqXvqJZqXvqJZqXv"/></p>
 <p><span>Certificates will only be issued for participants that have earned them BEFORE an issue date.</span></p>
 <p>When you have finished reviewing the Course Details page, use the inline "Next" button at the bottom of the page to go to the final Start Here activity—reviewing and accepting the Terms of Use.</p>
 <h3>Terms of Use page</h3>
@@ -144,8 +144,8 @@
 <li>Require a score of 100% to earn a certificate</li>
 <li>Unlimited attempts</li>
 </ul>
-<p>To start this Quiz, I'll click on the "Take the Quiz" button. For this demonstration, I'm going to select the first answer for each question. After I have answered all of the questions, I'll click the "Submit Quiz" at the bottom of the page. Canvas shows me which questions I answered incorrectly:<br><br></p>
-<p><img class="screen" src="https://usucourses.instructure.com/courses/2879/files/1235470/preview?verifier=Y8qJZqXvqJZqXvqJZqXvqJZqXvqJZqXv" alt="Screenshot of an incorrect answer flagged in the Quiz tool." width="80%" height="80%" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235470" data-api-returntype="File" loading="lazy"><br><br></p>
+<p>To start this Quiz, I'll click on the "Take the Quiz" button. For this demonstration, I'm going to select the first answer for each question. After I have answered all of the questions, I'll click the "Submit Quiz" at the bottom of the page. Canvas shows me which questions I answered incorrectly:<br/><br/></p>
+<p><img alt="Screenshot of an incorrect answer flagged in the Quiz tool." class="screen" data-api-endpoint="https://usucourses.instructure.com/api/v1/courses/2879/files/1235470" data-api-returntype="File" height="80%" loading="lazy" src="https://usucourses.instructure.com/courses/2879/files/1235470/preview?verifier=Y8qJZqXvqJZqXvqJZqXvqJZqXvqJZqXv" width="80%"/><br/><br/></p>
 <p>Because I want to answer all the questions correctly before moving on to the next section, I will need to retake this quiz.</p>
 <p>Once you have completed all of the Section Quizzes, you will take the Module Exam. I will use the inline "Next" buttons to skip past Sections 3, 4, &amp; 5—and their quizzes—to reach Exam 1.</p>
 <h3>Exam</h3>
@@ -164,10 +164,10 @@
 </div>
 </div>
 </div>
-        </div> <!-- end user_content -->
-    </div> <!-- end content -->
-    <div class="original-link">
-        <p><a href="https://usucourses.instructure.com/courses/2879/pages/course-orientation" target="_blank">View original page on Canvas</a></p>
-    </div>
+</div> <!-- end user_content -->
+</div> <!-- end content -->
+<div class="original-link">
+<p><a href="https://usucourses.instructure.com/courses/2879/pages/course-orientation" target="_blank">View original page on Canvas</a></p>
+</div>
 </body>
 </html>
